# dragon-service

./: dragon-service.cbp  dragon-service.depend  dragon-service.layout  dragonService.cbp  log.txt  main.cpp  resource.h  resource.rc
include/: CDModels.h  CDPlugin.h  CDSetting.h  CDUntils.h  ManagerMessager.h  ManagerPlugins.h  Message.h
nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  project.xml
plugins/: ControlerService.h  IPlugin.h
plugins/myLib/: CMakeLists.txt  log.txt  main.cpp  main.h  myLib.cbp  myLib.depend  myLib.layout
plugins/myLib/include/: CDDialog.h  MyLib.h
plugins/myLib/src/: MyLib.cpp
plugins/weather/: main.cpp  main.h  myLib.cbp  myLib.depend  myLib.layout  myLib.rc
plugins/weather/include/: MyLib.h
plugins/weather/src/: MyLib.cpp
src/: CDModels.cpp  CDSerialize.cpp  CDSetting.cpp  CDUntils.cpp  ManagerMessager.cpp  ManagerPlugins.cpp  Message.cpp
